crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__gra_0.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: tier
---
relations:
  - index: "1"
    head: "2"
    relation: DET
  - index: "2"
    head: "3"
    relation: NSUBJ
  - index: "3"
    head: "0"
    relation: ROOT
  - index: "4"
    head: "5"
    relation: DET
  - index: "5"
    head: "3"
    relation: OBJ
  - index: "6"
    head: "3"
    relation: COMPOUND-PRT
  - index: "7"
    head: "3"
    relation: PUNCT
