crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__gra_2.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: tier
---
relations:
  - index: "1"
    head: "2"
    relation: DET
  - index: "2"
    head: "3"
    relation: OBJ
  - index: "3"
    head: "0"
    relation: ROOT
  - index: "4"
    head: "3"
    relation: OBJ
  - index: "5"
    head: "7"
    relation: CASE
  - index: "6"
    head: "7"
    relation: DET
  - index: "7"
    head: "3"
    relation: OBL
  - index: "8"
    head: "3"
    relation: PUNCT
