crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__id_1.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: parsed
---
language: eng
corpus: Lyon
speaker: MAN
age: ""
sex: ""
group: ""
ses: ""
role: Male
education: ""
custom_field: Male_Adult_Near
